--- a/package.xml
+++ b/package.xml
@@ -8,6 +8,11 @@
   <license>MIT</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
+<exec_depend>joint_state_publisher</exec_depend>
+<exec_depend>robot_state_publisher</exec_depend>
+<exec_depend>rviz</exec_depend>
+<exec_depend>xacro</exec_depend>
+
 
   <depend>rclcpp</depend>
   <depend>std_msgs</depend>
